--- a/MVVMApplication/app/build.gradle
+++ b/MVVMApplication/app/build.gradle
@@ -59,4 +59,12 @@ dependencies {
     // Databinding compiler
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
+
+    implementation "org.koin:koin-android:2.1.6"
+    implementation "org.koin:koin-core:2.1.6"
+    implementation "org.koin:koin-core-ext:2.1.6"
+    implementation "org.koin:koin-android-viewmodel:2.1.6"
+    implementation "org.koin:koin-androidx-viewmodel:2.1.6"
+    implementation "org.koin:koin-androidx-ext:2.1.6"
 }
