--- a/MVVMApplication/app/build.gradle
+++ b/MVVMApplication/app/build.gradle
@@ -45,12 +45,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.6.0"
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
     implementation "com.squareup.okhttp3:logging-interceptor:3.14.2"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+
 
     // Picasso
     implementation "com.squareup.picasso:picasso:2.71828"
@@ -67,4 +74,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:2.1.6"
     implementation "org.koin:koin-androidx-viewmodel:2.1.6"
     implementation "org.koin:koin-androidx-ext:2.1.6"
+
+
+    implementation "com.jakewharton.timber:timber:4.7.1"
 }
